--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "csurf": "^1.10.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
